force-app/main/default/objects/DigitaleVsa__c/fields/WeihnachtsgeldP2__c.field-meta.xml
<CustomField>
    <fullName>WeihnachtsgeldP2__c</fullName>
    <label>Weihnachtsgeld P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>