force-app/main/default/objects/DigitaleVsa__c/fields/WertpapiereDepotsP1__c.field-meta.xml
<CustomField>
    <fullName>WertpapiereDepotsP1__c</fullName>
    <label>Wertpapiere / Depots P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>