force-app/main/default/objects/DigitaleVsa__c/fields/WertpapiereDepotsP2__c.field-meta.xml
<CustomField>
    <fullName>WertpapiereDepotsP2__c</fullName>
    <label>Wertpapiere / Depots P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>