force-app/main/default/objects/DigitaleVsa__c/fields/WertpapiereNurKurswerte__c.field-meta.xml
<CustomField>
    <fullName>WertpapiereNurKurswerte__c</fullName>
    <label>Wertpapiere (nur Kurswerte)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>