force-app/main/default/objects/DigitaleVsa__c/fields/WohngeldP1__c.field-meta.xml
<CustomField>
    <fullName>WohngeldP1__c</fullName>
    <label>Wohngeld P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>