force-app/main/default/objects/DigitaleVsa__c/fields/WohngeldP2__c.field-meta.xml
<CustomField>
    <fullName>WohngeldP2__c</fullName>
    <label>Wohngeld P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>