force-app/main/default/objects/DigitaleVsa__c/fields/WohnhaftSeitP1__c.field-meta.xml
<CustomField>
    <fullName>WohnhaftSeitP1__c</fullName>
    <formula>Finanzierungsanfrage__r.ErsterKaeufer__r.WohnhaftSeit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wohnhaft seit P1</label>
    <type>Date</type>
</CustomField>