force-app/main/default/objects/DigitaleVsa__c/fields/WohnhaftSeitP2__c.field-meta.xml
<CustomField>
    <fullName>WohnhaftSeitP2__c</fullName>
    <formula>Finanzierungsanfrage__r.ZweiterKaeufer__r.WohnhaftSeit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wohnhaft seit P2</label>
    <type>Date</type>
</CustomField>