force-app/main/default/objects/DigitaleVsa__c/fields/WohnnebenkostenP1__c.field-meta.xml
<CustomField>
    <fullName>WohnnebenkostenP1__c</fullName>
    <label>Wohnnebenkosten P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>