force-app/main/default/objects/DigitaleVsa__c/fields/WohnnebenkostenP2__c.field-meta.xml
<CustomField>
    <fullName>WohnnebenkostenP2__c</fullName>
    <label>Wohnnebenkosten P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>