force-app/main/default/objects/DigitaleVsa__c/fields/ZuwendungenVonEltern__c.field-meta.xml
<CustomField>
    <fullName>ZuwendungenVonEltern__c</fullName>
    <label>Zuwendungen von Eltern</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>